added a few flags to cadvisor to modestly reduce CPU usage ... about 10% decrease

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,7 @@ services:
     container_name: cadvisor
     networks:
       - monitoring
+    command: [ "-housekeeping_interval=5s", "-docker_only" ]
     volumes:
       - /:/rootfs:ro
       - /sys:/sys:ro
