--- a/prometheus/prometheus-server.yml
+++ b/prometheus/prometheus-server.yml
@@ -11,7 +11,7 @@ global:
 
 # Load rules once and periodically evaluate them according to the global 'evaluation_interval'.
 rule_files:
-  # - "first.rules"
+  - /etc/prometheus/rules/alerts.conf
   # - "second.rules"
 
 scrape_configs:
