update nginx configs for docker swarm endpoints

--- a/nginx/default.d/blackbox_exporter.conf
+++ b/nginx/default.d/blackbox_exporter.conf
@@ -1,6 +1,6 @@
 location /blackbox/ {
   auth_basic prometheus;
   auth_basic_user_file /htpasswd;
-  proxy_pass http://blackbox_exporter:9115/;
+  proxy_pass http://blackbox-exporter:9115/;
   proxy_redirect / /blackbox/;
 }
