--- a/nginx/default.d/snmp_exporter.conf
+++ b/nginx/default.d/snmp_exporter.conf
@@ -1,6 +1,6 @@
 location /snmp/ {
   auth_basic prometheus;
   auth_basic_user_file /htpasswd;
-  proxy_pass http://snmp_exporter:9116/;
+  proxy_pass http://snmp-exporter:9116/;
   proxy_redirect / /snmp/;
 }
