--- a/prometheus/prometheus-server.yml
+++ b/prometheus/prometheus-server.yml
@@ -52,7 +52,7 @@ scrape_configs:
       - source_labels: [__param_target]
         target_label: instance
       - target_label: __address__
-        replacement: snmp_exporter:9116
+        replacement: snmp-exporter:9116
 
   - job_name: 'blackbox_ping'
     scrape_interval: 6s
@@ -69,7 +69,7 @@ scrape_configs:
       - source_labels: [__param_target]
         target_label: instance
       - target_label: __address__
-        replacement: blackbox_exporter:9115
+        replacement: blackbox-exporter:9115
 
   - job_name: 'blackbox_dns'
     scrape_interval: 6s
@@ -85,7 +85,7 @@ scrape_configs:
       - source_labels: [__param_target]
         target_label: instance
       - target_label: __address__
-        replacement: blackbox_exporter:9115
+        replacement: blackbox-exporter:9115
 
   - job_name: 'blackbox_http'
     scrape_interval: 6s
@@ -101,4 +101,4 @@ scrape_configs:
       - source_labels: [__param_target]
         target_label: instance
       - target_label: __address__
-        replacement: blackbox_exporter:9115
+        replacement: blackbox-exporter:9115
