--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -64,7 +64,8 @@ services:
                "-web.external-url=http://localhost:9090/prometheus/",
                "-web.console.libraries=/usr/share/prometheus/console_libraries",
                "-web.console.templates=/usr/share/prometheus/consoles",
-               "-alertmanager.url=http://alertmanager:9093/alertmanager"
+               "-alertmanager.url=http://alertmanager:9093/alertmanager",
+               "-storage.local.memory-chunks=250000"
              ]
     volumes:
       - prometheus-data:/prometheus:rw
