disable alertmanager and cadvisor services, updated grafana version

--- a/nginx/default.d/alertmanager.conf
+++ b/nginx/default.d/alertmanager.conf
@@ -1,6 +1,6 @@
 location /alertmanager/ {
   auth_basic prometheus;
   auth_basic_user_file /htpasswd;
-  proxy_pass http://alertmanager:9093/alertmanager/;
-#  proxy_redirect / /alertmanager/;
+#  proxy_pass http://alertmanager:9093/alertmanager/;
+##  proxy_redirect / /alertmanager/;
 }
