--- a/nginx/default.d/cadvisor.conf
+++ b/nginx/default.d/cadvisor.conf
@@ -1,6 +1,6 @@
 location /cadvisor/ {
   auth_basic prometheus;
   auth_basic_user_file /htpasswd;
-  proxy_pass http://cadvisor:8080/;
-  proxy_redirect / /cadvisor/;
+#  proxy_pass http://cadvisor:8080/;
+#  proxy_redirect / /cadvisor/;
 }
