--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3"
+version: "3.1"
 
 volumes:
   prometheus-data:
@@ -22,19 +22,19 @@ services:
       interval: 10s
       timeout: 5s
       retries: 3
-  cadvisor:
-    image: armhf-cadvisor:latest
-    command: [ "-housekeeping_interval=5s", "-docker_only" ]
-    volumes:
-      - /:/rootfs:ro
-      - /sys:/sys:ro
-      - /var/lib/docker/:/var/lib/docker:ro
-      - /var/run:/var/run:rw
-    healthcheck:
-      test: ['CMD', 'wget', '-q', '-O', '/dev/null', 'http://localhost:8080/metrics']
-      interval: 10s
-      timeout: 5s
-      retries: 3
+#  cadvisor:
+#    image: armhf-cadvisor:latest
+#    command: [ "-housekeeping_interval=5s", "-docker_only" ]
+#    volumes:
+#      - /:/rootfs:ro
+#      - /sys:/sys:ro
+#      - /var/lib/docker/:/var/lib/docker:ro
+#      - /var/run:/var/run:rw
+#    healthcheck:
+#      test: ['CMD', 'wget', '-q', '-O', '/dev/null', 'http://localhost:8080/metrics']
+#      interval: 10s
+#      timeout: 5s
+#      retries: 3
   blackbox-exporter:
     image: armhf-prometheus-blackbox_exporter:latest
 # cap_add not supported in swarm, wonder if that breaks blackbox pings?
@@ -68,7 +68,7 @@ services:
                "-storage.local.target-heap-size=419430400"
              ]
     volumes:
-      - prometheus-data:/prometheus:rw
+      - /data/prometheus:/prometheus:rw
       - ./prometheus/prometheus-server.yml:/etc/prometheus/prometheus.yml:ro
       - ./prometheus/file_sd/:/etc/prometheus/file_sd/:ro
       - ./prometheus/rules/:/etc/prometheus/rules/:ro
@@ -77,20 +77,22 @@ services:
       interval: 10s
       timeout: 5s
       retries: 3
-  alertmanager:
-    image: armhf-prometheus-alertmanager:latest
-    command: [
-               "-web.external-url=http://localhost:9090/alertmanager/",
-               "-config.file=/etc/alertmanager/config.yml"
-             ]
-    volumes:
-      - alertmanager-data:/alertmanager:rw
-      - ./prometheus/alertmanager.yml:/etc/alertmanager/config.yml:ro
-    healthcheck:
-      test: ['CMD', 'wget', '-q', '-O', '/dev/null', 'http://localhost:9093/alertmanager/metrics']
-      interval: 10s
-      timeout: 5s
-      retries: 3
+#      start_period: 10m
+    stop_grace_period: 1m
+#  alertmanager:
+#    image: armhf-prometheus-alertmanager:latest
+#    command: [
+#               "-web.external-url=http://localhost:9090/alertmanager/",
+#               "-config.file=/etc/alertmanager/config.yml"
+#             ]
+#    volumes:
+#      - alertmanager-data:/alertmanager:rw
+#      - ./prometheus/alertmanager.yml:/etc/alertmanager/config.yml:ro
+#    healthcheck:
+#      test: ['CMD', 'wget', '-q', '-O', '/dev/null', 'http://localhost:9093/alertmanager/metrics']
+#      interval: 10s
+#      timeout: 5s
+#      retries: 3
   nginx:
     image: armhf-nginx
     volumes:
@@ -106,7 +108,8 @@ services:
       timeout: 5s
       retries: 3
   grafana:
-    image: fg2it/grafana-armhf:v4.1.2
+#    image: fg2it/grafana-armhf:v4.1.2
+    image: fg2it/grafana-armhf:v4.3.2
     volumes:
       - grafana-data:/var/lib/grafana:rw
       - grafana-logs:/var/log/grafana:rw
