updated blackbox exporter config for 0.8.1

--- a/prometheus/blackbox_exporter_config.yml
+++ b/prometheus/blackbox_exporter_config.yml
@@ -3,25 +3,21 @@ modules:
     prober: http
     timeout: 5s
     http:
-      protocol: tcp
       preferred_ip_protocol: ip4
   http_post_2xx:
     prober: http
     timeout: 5s
     http:
       method: POST
-      protocol: tcp
       preferred_ip_protocol: ip4
   tcp_connect:
     prober: tcp
     timeout: 5s
     tcp:
-      protocol: tcp
       preferred_ip_protocol: ip4
   pop3s_banner:
     prober: tcp
     tcp:
-      protocol: tcp
       preferred_ip_protocol: ip4
       query_response:
       - expect: "^+OK"
@@ -32,7 +28,6 @@ modules:
     prober: tcp
     timeout: 5s
     tcp:
-      protocol: tcp
       preferred_ip_protocol: ip4
       query_response:
       - expect: "^SSH-2.0-"
@@ -40,7 +35,6 @@ modules:
     prober: tcp
     timeout: 5s
     tcp:
-      protocol: tcp
       preferred_ip_protocol: ip4
       query_response:
       - send: "NICK prober"
@@ -52,13 +46,12 @@ modules:
     prober: icmp
     timeout: 5s
     icmp:
-      protocol: icmp
       preferred_ip_protocol: ip4
   dns_udp:
     prober: dns
     timeout: 5s
     dns:
-      protocol: udp
+      transport_protocol: udp
       preferred_ip_protocol: ip4
       query_name: "www.prometheus.io"
       query_type: "ANY"
