move prometheus back to this stack

--- a/nginx/default.d/prometheus.conf
+++ b/nginx/default.d/prometheus.conf
@@ -1,6 +1,6 @@
 location /prometheus/ {
   auth_basic prometheus;
   auth_basic_user_file /htpasswd;
-  proxy_pass http://mac-mini:9090/prometheus/;
+  proxy_pass http://prometheus-server:9090/prometheus/;
 #  proxy_redirect / /prometheus/;
 }
