change image refs to use repo, limit prom server heap to ~400MB

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.2"
 
 services:
   blackbox-exporter:
-    image: armhf-prometheus-blackbox_exporter:0.10.0
+    image: mac-mini:5000/armhf-prometheus-blackbox_exporter:0.10.0
 # cap_add not supported in swarm, wonder if that breaks blackbox pings?
 #    cap_add:
 #      - NET_RAW
@@ -19,7 +19,7 @@ services:
       timeout: 5s
       retries: 3
   snmp-exporter:
-    image: armhf-prometheus-snmp_exporter:0.7.0
+    image: mac-mini:5000/armhf-prometheus-snmp_exporter:0.7.0
     volumes:
       - ./prometheus/snmp_exporter_config.yml:/etc/snmp_exporter/config.yml:ro
     ports:
@@ -33,7 +33,7 @@ services:
       timeout: 5s
       retries: 3
   nginx:
-    image: armhf-nginx:20171003
+    image: mac-mini:5000/armhf-nginx:20171029
     volumes:
       - ./nginx/default.d/:/etc/nginx/default.d/:ro
       - ./nginx/conf.d/:/etc/nginx/conf.d/:ro
@@ -55,7 +55,7 @@ services:
       timeout: 5s
       retries: 3
   speedtest-pusher:
-    image: armhf-prometheus-speedtest-pusher
+    image: mac-mini:5000/armhf-prometheus-speedtest-pusher:latest
     deploy:
       replicas: 1
       restart_policy:
@@ -63,7 +63,7 @@ services:
     environment:
       - PUSH_GW=mac-mini:9091
   prometheus-server:
-    image: armhf-prometheus-server:1.8.1
+    image: mac-mini:5000/armhf-prometheus-server:1.8.1
     ports:
       - target: 9090
         published: 9090
@@ -72,10 +72,11 @@ services:
     command: [
                "-config.file=/etc/prometheus/prometheus.yml",
                "-storage.local.path=/prometheus",
+               "-storage.local.target-heap-size=400000000",
                "-web.external-url=http://localhost:9090/prometheus/",
                "-web.console.libraries=/usr/share/prometheus/console_libraries",
                "-web.console.templates=/usr/share/prometheus/consoles",
-               "-alertmanager.url=http://mac-mini:9093/alertmanager",
+               "-alertmanager.url=http://mac-mini:9093/alertmanager"
              ]
     volumes:
       - /data/prometheus:/prometheus:rw
